More Rakefile cleanup; daemon in cwd

--- a/init/hashdot-daemon.erb
+++ b/init/hashdot-daemon.erb
@@ -1,9 +1,8 @@
 #!/usr/bin/env jruby
 #-*- ruby -*-
-#. hashdot.chdir            = /opt/var/hashdot-daemon
 #. hashdot.profile         += daemon
-#. hashdot.pid_file         = hashdot-daemon.pid
-#. hashdot.io_redirect.file = hashdot-daemon.log
+#. hashdot.pid_file         = ./hashdot-daemon.pid
+#. hashdot.io_redirect.file = ./hashdot-daemon.log
 
 #<%# ERB Template %> Generated from <%= efile %>
 
